--- a/data-architect.html
+++ b/data-architect.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-architect-2858'>Data Architect - Ritchie Bros. Careers</a></h5> 
+<h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-architect-2858'>Data Architect - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -205,7 +205,7 @@ dig?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vonage/jobs/4481150002'>Job Application for Senior BI Developer / Data & Analytics Architect at Vonage</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vonage/jobs/4481150002'>Job Application for Senior BI Developer / Data & Analytics Architect at Vonage</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -213,7 +213,7 @@ dig?...</p>
 <p><span class="badge badge-light">Minneapolis, MNMinneapolis</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698067473-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698067473-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -253,7 +253,7 @@ dig?...</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/qlik/job/o2Dxafw6'>Qlik Careers - Analytics Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/qlik/job/o2Dxafw6'>Qlik Careers - Analytics Data Architect</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -302,7 +302,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -310,7 +310,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi'>
+<h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -410,19 +410,19 @@ We are the trusted analytics partner for several Fortune 100 companies,?...</p>
 <p>Oct 2, 2019 ... Use machine learning, algorithm generation and implementation, and support 
 our Federal Client's business in defining requirements to support machine?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4481805002'>Job Application for Data Science Architect at Snowflake</a></h5> 
+<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4481805002'>Job Application for Data Science Architect at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/5103812e-cf8f-4a44-be4d-f07888eae53d'>Datacom - Digital Workplace Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/5103812e-cf8f-4a44-be4d-f07888eae53d'>Datacom - Digital Workplace Architect</a></h5> 
 <p><span class="badge badge-light">Canberra  Canberra</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://www.thetagit.com/careers/data-architect-analyst-1208/'>Data Architect/Analyst 1208 - The Talent Advantage Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.thetagit.com/careers/data-architect-analyst-1208/'>Data Architect/Analyst 1208 - The Talent Advantage Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/8a7gt1cek5a9nse98mta61fx9h'>Senior Data Engineer / Data Architect (Private Equity Company) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/8a7gt1cek5a9nse98mta61fx9h'>Senior Data Engineer / Data Architect (Private Equity Company) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -454,7 +454,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://legitjobs.com.ng/job/ccie-security-solution-architect/'>CCIE Security and CCIE Data Center Solution Architect ? LEGIT NIGERIAN JOBS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://legitjobs.com.ng/job/ccie-security-solution-architect/'>CCIE Security and CCIE Data Center Solution Architect ? LEGIT NIGERIAN JOBS</a></h5> 
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
